<resources>
    <string name="app_name" translatable="false">Jam TUgether</string>

    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="confirm">Confirm</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="room">Room</string>

    <string name="choose_main_instrument">Choose your main instrument</string>
    <string name="main_instrument_info">This instrument will be automatically chosen for you every time you enter a room. You can always change it in the settings.</string>
    <string name="join_room_info">Join your favorite room by entering the room ID</string>
    <string name="room_id">Room ID</string>

    <string name="user_name">User name</string>
    <string name="user_name_info">This name will be displayed next to your own soundtracks.</string>

    <string name="instrument_flute">Flute</string>
    <string name="instrument_drums">Drums</string>
    <string name="instrument_shaker">Shaker</string>
    <string name="instrument_piano">Piano</string>

    <string name="admin_settings">Admin Settings</string>

    <string name="metronome">Metronome</string>
    <string name="metronome_ticks_per_tact">Ticks</string>
    <string name="metronome_tempo">Tempo</string>

    <string name="settings">Settings</string>
    <string name="main_instrument">Main instrument</string>

    <string name="create_room">Create room</string>
    <string name="join_room">Join room</string>

    <string name="password">Password</string>

    <string name="go_to_room">Go to room</string>

    <string name="watch_on_boarding">Watch App-Tutorial</string>

    <string name="soundtrack_over_view">Overview</string>
    <string name="musician_view">Musician View</string>

    <string name="name_input_empty">Du have to enter a name.</string>
    <string name="room_input_empty">You have to enter a room.</string>
    <string name="room_invalid">This room is invalid.</string>
    <string name="password_input_empty">You have to enter a password.</string>

    <string name="composite">Composite</string>
    <string name="own_soundtrack">Own soundtrack</string>

    <string name="composite_soundtrack_place_holder">Composite soundtrack</string>
    <string name="own_soundtrack_place_holder">Own soundtrack</string>

    <string name="upload">Upload</string>
    <string name="upload_reminder_dialog_title">Reminder</string>
    <string name="upload_reminder_dialog_message">Don\'t forget to upload your soundtrack!</string>

    <string name="play_with_composite_soundtrack">with soundtrack</string>

    <string name="loop_record_with_composite_soundtrack">loop</string>

    <string name="room_format">Room %d</string>

    <string name="leave_room">Leave room</string>
    <string name="leave_room_confirmation">Are you sure that you want to leave this room?</string>

    <string name="delete_soundtrack">Delete soundtrack</string>
    <string name="delete_soundtrack_confirmation">Are you sure that you want to delete this soundtrack?</string>

    <string name="delete_room">Delete room</string>
    <string name="delete_room_confirmation">Are you sure that you want to delete this room?</string>

    <string name="no_permission_microphone_error_title">Missing permission</string>
    <string name="no_permission_microphone_error_message">The app does not have permission to access your microphone! You can change this in the settings</string>

    <string name="unauthorized_access_error_title">Authentication failed</string>
    <string name="unauthorized_access_error_message">The authentication failed.</string>
    <string name="room_or_password_invalid_title">Error</string>
    <string name="room_or_password_invalid_message">Room or password is invalid.</string>
    <string name="page_not_found_error_title">Page not found</string>
    <string name="page_not_found_error_message">The requested page was not found.</string>
    <string name="internal_server_error_title">Error</string>
    <string name="internal_server_error_message">Something went wrong.</string>
    <string name="password_too_large_error_title">Error</string>
    <string name="password_too_large_error_message">Password is too large.</string>
    <string name="forbidden_access_error_title">No permission</string>
    <string name="forbidden_access_error_message">You don\'t have permission to execute this action.</string>
    <string name="no_internet_connection_title">No Internet</string>
    <string name="no_internet_connection_message">You don\'t have an internet connection.</string>
    <string name="room_number_limit_reached_error_title">Error</string>
    <string name="room_number_limit_reached_error_message">You can\'t create a new room because the number of existing rooms has reached its limit.</string>
    <string name="generic_error_title">Error</string>
    <string name="generic_error_message">Something went wrong.</string>
    <string name="room_does_not_exist_error_title">Room</string>
    <string name="room_does_not_exist_error_message">This room doesn\'t exist anymore</string>
    <string name="old_admin_error_title">No permission</string>
    <string name="old_admin_error_message">You are not an admin anymore. You don\'t have permission to execute this action.</string>
    <string name="room_deleted_error_title">Room deleted</string>
    <string name="room_deleted_error_message">This room has been deleted!</string>
    <string name="token_expired_error_title">Long inactivity</string>
    <string name="token_expired_error_message">You were kicked out of the room due to long inactivity.</string>

    <string name="not_admin_dialog_title">No permission</string>
    <string name="not_admin_dialog_message">You don\'t have access to the admin settings</string>
    <string name="user_became_admin_snackbar_message">You are the admin now!</string>
    <string name="user_became_regular_snackbar_message">You are not the admin anymore!</string>

    <string name="music_note_c">C</string>
    <string name="music_note_c_sharp">C#</string>
    <string name="music_note_d">D</string>
    <string name="music_note_d_sharp">D#</string>
    <string name="music_note_e">E</string>
    <string name="music_note_f">F</string>
    <string name="music_note_f_sharp">F#</string>
    <string name="music_note_g">G</string>
    <string name="music_note_g_sharp">G#</string>
    <string name="music_note_a">A</string>
    <string name="music_note_a_sharp">A#</string>
    <string name="music_note_b">B</string>
    <string name="music_note_c_high">C</string>

    <string name="on_boarding_welcome_message">Welcome to \nJam TUgether</string>
    <string name="create_room_title">Create room</string>
    <string name="create_room_text">Create a room and share your ID with your friends</string>
    <string name="join_room_title">Enter room</string>
    <string name="join_room_text">Got an ID of a friend? Then join the room</string>
    <string name="ready_to_upload_warning_title">Attention</string>
    <string name="ready_to_upload_warning_text">You have to upload your old soundtrack to add it to the composite track. Then you can record a new soundtrack</string>
    <string name="musician_overview_text">In the overview screen you can listen to all tracks and delete your own too. As an admin you can delete all tracks or the whole room</string>
    <string name="musician_overview_title">Overview</string>
    <string name="update_title">Update</string>
    <string name="update_text">The entire composite track is always updated automatically when the red circle is full</string>
    <string name="record_with_soundtrack_title">With soundtrack</string>
    <string name="record_with_soundtrack_text">You can choose whether you want to hear the entire soundtrack while recording</string>
    <string name="soundtracks_title">Soundtracks</string>
    <string name="soundtracks_text">After your first recording, the entire audio track and your own audio track appear here</string>
    <string name="change_instrument_title">Change instrument</string>
    <string name="change_instrument_text">You can change the instrument in the top right corner in the menu</string>
    <string name="start_record_title">Start recording</string>
    <string name="start_record_text">Press the red button to start and stop recording</string>
    <string name="room_id_title">Room ID</string>
    <string name="room_id_text">At the top left you will find the room ID. Share this with your friends to make music together</string>
    <string name="flute_functionality_title">Functionality</string>
    <string name="flute_functionality_text">Blow into your microphone to make a sound. To change the pitch, you have to move the slider</string>
    <string name="flute_warning_title">Attention</string>
    <string name="flute_warning_text">You have to wear headphones to play the flute!</string>
    <string name="shaker_functionality_title">Functionality</string>
    <string name="shaker_functionality_text">Shake your phone as if you were playing a shaker to make sounds</string>
    <string name="drums_functionality_title">Functionality</string>
    <string name="drums_functionality_text">Tap on the icons to play the drums</string>
    <string name="piano_functionality_title">Functionality</string>
    <string name="piano_functionality_text">Tap on the keys to play the notes</string>
    <string name="record_loop_title">Loop</string>
    <string name="record_loop_text">Activates loop recording and auto uploading</string>
    <string name="metronome_title">Metronome</string>
    <string name="metronome_text">Tab on the metronome to hear a click at a regular interval</string>
    <string name="admin_title">Admin</string>
    <string name="admin_text">If you can see the yellow star, you are administrator and can change the rhythm or delete the room by clicking on it</string>
</resources>