<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:adjustViewBounds="true"
            android:background="@color/primaryTextColor"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_room_screen"></ImageView>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/create_room_title"></TextView>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create_room_text"></TextView>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/join_room_title"></TextView>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/join_room_text"></TextView>
    </LinearLayout>


</ScrollView>